--- a/index.html
+++ b/index.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Document</title>
   </head>
   <body>
-    <div id="ustContainer">
-      <div id="oncekiContainer">
-        <button id="onceki"></button>
+    <div id="upperContainer">
+      <div id="beforeContainer">
+        <button id="before"></button>
       </div>
 
-      <div id="dataGosterimYeri">
+      <div id="dataShownArea">
         <div id="profile"></div>
         <div id="altCard"></div>
-        <div id="hobiler"></div>
+        <div id="hobbies"></div>
       </div>
-      <div id="sonrakiContainer">
-        <button id="sonraki"></button>
+      <div id="afterContainer">
+        <button id="after"></button>
       </div>
     </div>
-    <button id="sec">WHO IS THE LUCKY ONE?</button>
+    <button id="choose">WHO IS THE LUCKY ONE?</button>
     <div id="choosenOne"></div>
     <div id="congratulation"></div>
 
