--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="container">
     <div id="upperContainer">
       <div id="beforeContainer">
         <button id="before"></button>
@@ -21,10 +22,10 @@
         <button id="after"></button>
       </div>
     </div>
-    <button id="choose">WHO IS THE LUCKY ONE?</button>
+    <button id="choose">YOU ARE THE LUCKY ONE</button>
     <div id="choosenOne"></div>
     <div id="congratulation"></div>
-
+  </div>
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   </body>
